--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "js:build:main": "asbundle app/index.js public/main.js",
-    "dev": "nodemon --watch app --exec \"npm run js:build:main\"",
+    "js:build:main": "asbundle client/index.js public/main.js",
+    "dev:server": "nodemon --watch runner.mjs --watch api runner.mjs | bunyan",
+    "dev:client": "nodemon --watch client --exec \"npm run js:build:main\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "WTFPL",
   "dependencies": {
-    "asbundle": "^2.6.1",
-    "mithril": "^2.0.4",
+    "lodash": "^4.17.20",
     "node-static": "^0.7.11",
-    "nodemon": "^2.0.4",
     "socket.io-serveronly": "^2.3.0"
+  },
+  "devDependencies": {
+    "asbundle": "^2.6.1",
+    "bunyan-lite": "^1.0.1",
+    "mithril": "^2.0.4",
+    "nodemon": "^2.0.4"
   }
 }
